data/derived/comb/progs/unify/prog8207.ml.out
Characters 50-67:
  else digitsOfInt(n/10) :: n;;
       ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
